[package]
name = "zline-api"
version = "0.1.0"
edition = "2021"
authors = [ "ArthurZhou <89689293+ArthurZhou@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.12", features = ["json"]}
serde_json = "1"
tl = "0.7"
serde = "1"
